начал разметку header

--- a/index.html
+++ b/index.html
@@ -1,21 +1,29 @@
 <!DOCTYPE HTML>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Кваст</title>
-  </head>
-  <body>
+ 
+<head>
+  <meta charset="utf-8">
+  <title>Кваст</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
   
-<div>
-<img src="img/logo.png" alt="Кваст">
-<ul>
-  <li><a href="#">История</a></li>
-  <li><a href="#">Производство</a></li>
-  <li><a href="#">Ассортимент</a></li>
-  <li><a href="#">Где купить</a></li>
-</ul>
-<span>Крафтовый квас<br>всему голова!</span>
-</div>  
+<body>
+  
+<header>
+  <div class="container">
+  <div class="clearfix">
+    <img src="img/logo.png" alt="Кваст">
+    <ul class="main-nav">
+      <li><a href="#">История</a></li>
+      <li><a href="#">Производство</a></li>
+      <li><a href="#">Ассортимент</a></li>
+      <li><a href="#">Где купить</a></li>
+    </ul>
+  </div>
+  <span class="slogan">Крафтовый квас<br>всему голова!</span>
+  </div>
+</header>  
 
 <div>
 <h2>Новинки</h2> 
@@ -108,8 +116,8 @@
     <cite>Газета столичный Стольник</cite>
     <a href="#">Читать далее</a>
     </blockquote>
-  </dd>
-</dl>
+  
+
 </div>
 
 <div>
