--- a/index.html
+++ b/index.html
@@ -25,47 +25,57 @@
   </div>
 </header>  
 
-<div>
-<h2>Новинки</h2> 
-<h3>Вахтёр</h3> 
-<table>
-  <tr>
-    <td>Алк.</td>
-    <td>&lt; 1%</td>
-  </tr>
-  <tr>
-    <td>Ккал:</td>
-    <td>35</td>
-  </tr>
-</table>
- <p>Ржаной хлеб, Вода, Солод, Соль</p>
-<img src="img/bottle-left.jpg" alt="Вахтёр">
-<p>Терпкий и мощный, вкус этого кваса взбодрит после тяжёлого дня и придаст сил для вечерних приключений!</p>
-<a href="#">Подробнее</a>
-<a href="#">Купить</a>
-<b>150 Р.</b>
+<div class="new">
+  <div class="container clearfix">
+    <h2>Новинки</h2>    
+    <div class="bottle-left">
+      <h3>Вахтёр</h3> 
+      <div class="clearfix">
+        <div class="bottle-left-desctiption">
+          <table>
+        <tr>
+          <td>Алк.</td>
+          <td>&lt; 1%</td>
+        </tr>
+        <tr>
+          <td>Ккал:</td>
+          <td>35</td>
+        </tr>
+      </table>
+          <p>Ржаной хлеб, Вода, Солод, Соль</p>
+        </div>
+        <img src="img/bottle-left.jpg" alt="Вахтёр">
+      </div>
+      <p>Терпкий и мощный, вкус этого кваса взбодрит после тяжёлого дня и придаст сил для вечерних приключений!</p>
+      <a href="#">Подробнее</a>
+      <a href="#">Купить</a>
+      <b>150 Р.</b>
+    </div>
 
-
-<h3>Романтик</h3>
-<table>
-  <tr>
-    <td>Алк.</td>
-    <td>&lt; 0,5%</td>
-  </tr>
-  <tr>
-    <td>Ккал:</td>
-    <td>27</td>
-  </tr>
-</table>
-
-
-<p>Ячменный хлеб, Вода, Солод, Апельсин</p>
-<img src="img/bottle-right.jpg" alt="">
-<p>Лёгкий и освежающий напиток поможет сохранять отличное настроение в течение всего дня.</p>
-
-<a href="#">Подробнее</a>
-<a href="#">Купить</a>
-<b>90 Р.</b>
+    <div class="bottle-right">    
+    <h3>Романтик</h3>
+    <div class="clearfix">
+      <div class="bottle-left-desctiption">
+        <table>
+          <tr>
+            <td>Алк.</td>
+            <td>&lt; 0,5%</td>
+          </tr>
+          <tr>
+            <td>Ккал:</td>
+            <td>27</td>
+          </tr>
+        </table>
+        <p>Ячменный хлеб, Вода, Солод, Апельсин</p>
+      </div>
+      <img src="img/bottle-right.jpg" alt="">
+    </div>
+    <p>Лёгкий и освежающий напиток поможет сохранять отличное настроение в течение всего дня.</p>
+    <a href="#">Подробнее</a>
+    <a href="#">Купить</a>
+    <b>90 Р.</b>
+    </div>
+  </div>
 </div>
 
 <div>
