разметил блок Новинки

--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
 <div class="new">
   <div class="container clearfix">
     <h2>Новинки</h2>    
-    <div class="bottle-left">
-      <h3>Вахтёр</h3> 
-      <div class="clearfix">
-        <div class="bottle-left-desctiption">
+    <div class="bottle-left">      
+       <div class="bottle-desctiption">
           <table>
         <tr>
           <td>Алк.</td>
@@ -43,19 +41,16 @@
         </tr>
       </table>
           <p>Ржаной хлеб, Вода, Солод, Соль</p>
-        </div>
-        <img src="img/bottle-left.jpg" alt="Вахтёр">
-      </div>
+        </div>     
+      <h3>Вахтёр</h3>
       <p>Терпкий и мощный, вкус этого кваса взбодрит после тяжёлого дня и придаст сил для вечерних приключений!</p>
       <a href="#">Подробнее</a>
       <a href="#">Купить</a>
       <b>150 Р.</b>
     </div>
 
-    <div class="bottle-right">    
-    <h3>Романтик</h3>
-    <div class="clearfix">
-      <div class="bottle-left-desctiption">
+    <div class="bottle-right">        
+      <div class="bottle-desctiption">
         <table>
           <tr>
             <td>Алк.</td>
@@ -66,14 +61,13 @@
             <td>27</td>
           </tr>
         </table>
-        <p>Ячменный хлеб, Вода, Солод, Апельсин</p>
+        <p>Ячменный хлеб, Вода, СолодАпельсин</p>
       </div>
-      <img src="img/bottle-right.jpg" alt="">
-    </div>
-    <p>Лёгкий и освежающий напиток поможет сохранять отличное настроение в течение всего дня.</p>
-    <a href="#">Подробнее</a>
-    <a href="#">Купить</a>
-    <b>90 Р.</b>
+      <h3>Романтик</h3>  
+      <p>Лёгкий и освежающий напиток поможет сохранять отличное настроение в течение всего дня.</p>
+      <a href="#">Подробнее</a>
+      <a href="#">Купить</a>
+      <b>90 Р.</b>
     </div>
   </div>
 </div>
