разметил блок Преимущества

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
       <a href="#">Купить</a>
       <b>150 Р.</b>
     </div>
-
     <div class="bottle-right">        
       <div class="bottle-desctiption">
         <table>
@@ -72,8 +71,9 @@
   </div>
 </div>
 
-<div>
-<ul>
+<div class="features">
+<div class="features-container">
+<ul class="clearfix">
   <li>
     <h2>Варим сами</h2>
     <p>Вот этими самыми руками. Экспериментируем и творим, что хотим.</p>
@@ -86,6 +86,7 @@
     <h2>Не экономим</h2>
     <p>Человек это то, что он ест и пьет. У нас только качественные ингредиенты.</p></li>
 </ul>
+</div>
 </div>
 
 <div>
