--- a/index.html
+++ b/index.html
@@ -89,21 +89,29 @@
 </div>
 </div>
 
-<div>
+<section class="history">
+<div class="container">
 <h2>Немного истории</h2>
 <dl>
-  <dt>
-    <h3>Происхождение кваса</h3><cite>Источник: </cite><a href="ru.wikipedia.org">ru.wikipedia.org</a>
+  <dt class="clearfix">
+    <h3>Происхождение кваса</h3>
+    <div class="cite">
+      <cite>Источник: </cite>
+      <a href="ru.wikipedia.org">ru.wikipedia.org</a>
+    </div>
   </dt>
-  <dd>
+  <dd class="clearfix">
     <img src="img/wiki-1.png" alt="">
     <p>Квас на Руси появился в X-XI веке. Само слово «квас» тоже имеет древнерусское происхождение. Помимо России квас готовят в Белоруссии, Сербии, Македонии, Словакии и многих других странах, но называется он везде одинаково — квас.</p>
   </dd>
-  <dt>
+  <dt class="clearfix">
     <h3>Классификация кваса</h3>
-    <cite>Источник: </cite><a href="ru.wikipedia.org">ru.wikipedia.org</a>
+    <div class="cite">    
+      <cite>Источник: </cite>
+      <a href="ru.wikipedia.org">ru.wikipedia.org</a>
+    </div>
   </dt>
-  <dd>
+  <dd class="clearfix">
     <img src="img/wiki-2.png" alt="">
     <p>
       По российскому ГОСТу для промышленного изготовления — это напиток с объёмной долей этилового спирта не более 1,2%, изготовленный в результате незавершённого спиртового и молочнокислого брожения сусла.
@@ -111,6 +119,7 @@
   </dd>
 </dl>
 </div>
+</section>
 
 <div>
 
