--- a/index.html
+++ b/index.html
@@ -121,18 +121,19 @@
 </div>
 </section>
 
-<div>
 
-    <h2>Пресса о нас</h2>
-  
+<section class="press">
+  <div class="container">
+    <h2>Пресса о нас</h2>  
     <blockquote>
-    <p>Сегодня мы провели дегустацию чего-то действительно новенького — крафтового кваса. Да, да, вы не ослышались! Спасибо Арсену и Руслану за то, что предоставили целую бочку своего напитка!</p>
-    <cite>Газета столичный Стольник</cite>
-    <a href="#">Читать далее</a>
+      <p>Сегодня мы провели дегустацию чего-то действительно новенького — крафтового кваса. Да, да, вы не ослышались! Спасибо Арсену и Руслану за то, что предоставили целую бочку своего напитка!</p>
+      <div class="clearfix">
+        <cite>Газета столичный Стольник</cite>
+        <a href="#">Читать далее</a>
+      </div>
     </blockquote>
-  
-
-</div>
+  </div>
+</section>  
 
 <div>
 <h2>Ассортимент</h2>
