Блок Новинки без кнопок

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   </div>
 </header>  
 
-<div class="new">
+<section class="new">
   <div class="container clearfix">
     <h2>Новинки</h2>    
     <div class="bottle-left">      
-       <div class="bottle-desctiption">
-          <table>
+       <div class="bottle-description">
+          <table class="bottle-table">
         <tr>
           <td>Алк.</td>
           <td>&lt; 1%</td>
@@ -49,8 +49,8 @@
       <b>150 Р.</b>
     </div>
     <div class="bottle-right">        
-      <div class="bottle-desctiption">
-        <table>
+      <div class="bottle-description">
+        <table class="bottle-table">
           <tr>
             <td>Алк.</td>
             <td>&lt; 0,5%</td>
@@ -60,7 +60,7 @@
             <td>27</td>
           </tr>
         </table>
-        <p>Ячменный хлеб, Вода, СолодАпельсин</p>
+        <p>Ячменный хлеб, Вода, Солод, Апельсин</p>
       </div>
       <h3>Романтик</h3>  
       <p>Лёгкий и освежающий напиток поможет сохранять отличное настроение в течение всего дня.</p>
@@ -69,7 +69,7 @@
       <b>90 Р.</b>
     </div>
   </div>
-</div>
+</section>
 
 <div class="features">
 <div class="features-container">
