Закончил блок Новинки

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         </div>     
       <h3>Вахтёр</h3>
       <p>Терпкий и мощный, вкус этого кваса взбодрит после тяжёлого дня и придаст сил для вечерних приключений!</p>
-      <a href="#">Подробнее</a>
-      <a href="#">Купить</a>
+      <a class="btn btn-ghost" href="#">Подробнее</a>
+      <a class="btn btn-brown" href="#">Купить</a>
       <b>150 Р.</b>
     </div>
     <div class="bottle-right">        
@@ -64,8 +64,8 @@
       </div>
       <h3>Романтик</h3>  
       <p>Лёгкий и освежающий напиток поможет сохранять отличное настроение в течение всего дня.</p>
-      <a href="#">Подробнее</a>
-      <a href="#">Купить</a>
+      <a class="btn btn-ghost" href="#">Подробнее</a>
+      <a class="btn btn-brown" href="#">Купить</a>
       <b>90 Р.</b>
     </div>
   </div>
