--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
 <div class="features">
 <div class="features-container">
 <ul class="clearfix">
-  <li>
+  <li class="features-1">
     <h2>Варим сами</h2>
     <p>Вот этими самыми руками. Экспериментируем и творим, что хотим.</p>
   </li>
-  <li>
+  <li class="features-2">
     <h2>Своё, родное</h2>
     <p>Не заработка ради, а импортозамещения для. Поднимаем производство.</p>
   </li>
-  <li>
+  <li class="features-3">
     <h2>Не экономим</h2>
     <p>Человек это то, что он ест и пьет. У нас только качественные ингредиенты.</p></li>
 </ul>
