--- a/index.html
+++ b/index.html
@@ -71,23 +71,23 @@
   </div>
 </section>
 
-<div class="features">
+<section class="features">
 <div class="features-container">
 <ul class="clearfix">
   <li class="features-1">
-    <h2>Варим сами</h2>
+    <h3>Варим сами</h3>
     <p>Вот этими самыми руками. Экспериментируем и творим, что хотим.</p>
   </li>
   <li class="features-2">
-    <h2>Своё, родное</h2>
+    <h3>Своё, родное</h3>
     <p>Не заработка ради, а импортозамещения для. Поднимаем производство.</p>
   </li>
   <li class="features-3">
-    <h2>Не экономим</h2>
+    <h3>Не экономим</h3>
     <p>Человек это то, что он ест и пьет. У нас только качественные ингредиенты.</p></li>
 </ul>
 </div>
-</div>
+</section>
 
 <section class="history">
 <div class="container">
