--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
     <td>250 Р.</td>
   </tr>
   <tr>
-    <td>Вахтёр <sup>Новинка</sup></td>
+    <td>Вахтёр <span>Новинка</span></td>
     <td>&lt; 1%</td>
     <td>35</td>
     <td>0,5 л</td>
     <td>150 Р.</td>
   </tr>
   <tr>
-    <td>Романтик <sup>Новинка</sup></td>
+    <td>Романтик <span>Новинка</span></td>
     <td>&lt; 0,5%</td>
     <td>27</td>
     <td>0,5 л</td>
