--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
     <div class="footer-left">
       <img src="img/logo.png" alt="Кваст">
       <div class="footer-social">
-        <a class="footer-social-in" href=#>Инстаграм</a>
-        <a class="footer-social-fb" href=#>Фейсбук</a>
-        <a class="footer-social-vk" href=#>Вконтакте</a>
+        <a class="footer-social-in" href=#>Инстаграм</a><!--
+        --><a class="footer-social-fb" href=#>Фейсбук</a><!--
+        --><a class="footer-social-vk" href=#>Вконтакте</a>
       </div>
     </div>
 
@@ -243,8 +243,9 @@
   <p>При перепечатке материалов ссылка на сайт обязательна!</p>
   <div class="footer-copyright">
     <p>
-      <img src="img/htmlacademy.png" alt=""> <b>Разработчик:</b>
-      <a href="#">HTML Academy</a>
+      <a href="#" src="img/htmlacademy.png" alt=""></a> 
+      <b>Разработчик:</b>
+      <span>HTML Academy</span>
     </p>
   </div>
 </div>
