сделал красивый checkbox

--- a/index.html
+++ b/index.html
@@ -209,10 +209,11 @@
   <label for="comment-field">Доп. комментарий:</label>
   <textarea name="comment" id="comment-field" cols="30" rows="10" placeholder="Сообщите нам все, что считаете нужным"></textarea>
 </div>
-<div>
-  <label for="subscription-field">
-    <input type="checkbox" name="subscription" id="subscription-field">Я согласен получать квасную рассылку
-  </label>  
+<div>   
+  <label class="checkbox" for="subscription-field">
+      <input type="checkbox" name="subscription" id="subscription-field">
+      <span class="checkbox-indicator"></span>
+      Я согласен получать квасную рассылку</label>
 </div>
 <input type="submit" value="Отправить заказ">
 </form>
