--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
   
 <header>
   <div class="container">
-  <div class="clearfix">
-    <img src="img/logo.png" alt="Кваст">
-    <ul class="main-nav">
-      <li><a href="#">История</a></li>
-      <li><a href="#">Производство</a></li>
-      <li><a href="#">Ассортимент</a></li>
-      <li><a href="#">Где купить</a></li>
-    </ul>
-  </div>
-  <span class="slogan">Крафтовый квас<br>всему голова!</span>
+    <div class="clearfix">
+      <img src="img/logo.png" alt="Кваст">
+      <ul class="main-nav">
+        <li><a href="#">История</a></li>
+        <li><a href="#">Производство</a></li>
+        <li><a href="#">Ассортимент</a></li>
+        <li><a href="#">Где купить</a></li>
+      </ul>
+    </div>
+    <span class="slogan">Крафтовый квас<br>всему голова!</span>
   </div>
 </header>  
 
@@ -29,19 +29,19 @@
   <div class="container clearfix">
     <h2>Новинки</h2>    
     <div class="bottle-left">      
-       <div class="bottle-description">
-          <table class="bottle-table">
-        <tr>
-          <td>Алк.</td>
-          <td>&lt; 1%</td>
-        </tr>
-        <tr>
-          <td>Ккал:</td>
-          <td>35</td>
-        </tr>
-      </table>
-          <p>Ржаной хлеб, Вода, Солод, Соль</p>
-        </div>     
+      <div class="bottle-description">
+        <table class="bottle-table">
+          <tr>
+            <td>Алк.</td>
+            <td>&lt; 1%</td>
+          </tr>
+          <tr>
+            <td>Ккал:</td>
+            <td>35</td>
+          </tr>
+        </table>
+        <p>Ржаной хлеб, Вода, Солод, Соль</p>
+      </div>     
       <h3>Вахтёр</h3>
       <p>Терпкий и мощный, вкус этого кваса взбодрит после тяжёлого дня и придаст сил для вечерних приключений!</p>
       <a class="btn btn-ghost" href="#">Подробнее</a>
@@ -72,53 +72,52 @@
 </section>
 
 <section class="features">
-<div class="features-container">
-<ul class="clearfix">
-  <li class="features-1">
-    <h3>Варим сами</h3>
-    <p>Вот этими самыми руками. Экспериментируем и творим, что хотим.</p>
-  </li>
-  <li class="features-2">
-    <h3>Своё, родное</h3>
-    <p>Не заработка ради, а импортозамещения для. Поднимаем производство.</p>
-  </li>
-  <li class="features-3">
-    <h3>Не экономим</h3>
-    <p>Человек это то, что он ест и пьет. У нас только качественные ингредиенты.</p></li>
-</ul>
-</div>
+  <div class="features-container">
+    <ul class="clearfix">
+      <li class="features-1">
+        <h3>Варим сами</h3>
+        <p>Вот этими самыми руками. Экспериментируем и творим, что хотим.</p>
+      </li>
+      <li class="features-2">
+        <h3>Своё, родное</h3>
+        <p>Не заработка ради, а импортозамещения для. Поднимаем производство.</p>
+      </li>
+      <li class="features-3">
+        <h3>Не экономим</h3>
+        <p>Человек это то, что он ест и пьет. У нас только качественные ингредиенты.</p>
+      </li>
+    </ul>
+  </div>
 </section>
 
 <section class="history">
-<div class="container">
-<h2>Немного истории</h2>
-<dl>
-  <dt class="clearfix">
-    <h3>Происхождение кваса</h3>
-    <div class="cite">
-      <cite>Источник: </cite>
-      <a href="ru.wikipedia.org">ru.wikipedia.org</a>
-    </div>
-  </dt>
-  <dd class="clearfix">
-    <img src="img/wiki-1.png" alt="">
-    <p>Квас на Руси появился в X-XI веке. Само слово «квас» тоже имеет древнерусское происхождение. Помимо России квас готовят в Белоруссии, Сербии, Македонии, Словакии и многих других странах, но называется он везде одинаково — квас.</p>
-  </dd>
-  <dt class="clearfix">
-    <h3>Классификация кваса</h3>
-    <div class="cite">    
-      <cite>Источник: </cite>
-      <a href="ru.wikipedia.org">ru.wikipedia.org</a>
-    </div>
-  </dt>
-  <dd class="clearfix">
-    <img src="img/wiki-2.png" alt="">
-    <p>
-      По российскому ГОСТу для промышленного изготовления — это напиток с объёмной долей этилового спирта не более 1,2%, изготовленный в результате незавершённого спиртового и молочнокислого брожения сусла.
-    </p>
-  </dd>
-</dl>
-</div>
+  <div class="container">
+    <h2>Немного истории</h2>
+    <dl>
+      <dt class="clearfix">
+        <h3>Происхождение кваса</h3>
+        <div class="cite">
+          <cite>Источник: </cite>
+          <a href="ru.wikipedia.org">ru.wikipedia.org</a>
+        </div>
+      </dt>
+      <dd class="clearfix">
+        <img src="img/wiki-1.png" alt="">
+        <p>Квас на Руси появился в X-XI веке. Само слово «квас» тоже имеет древнерусское происхождение. Помимо России квас готовят в Белоруссии, Сербии, Македонии, Словакии и многих других странах, но называется он везде одинаково — квас.</p>
+      </dd>
+      <dt class="clearfix">
+        <h3>Классификация кваса</h3>
+        <div class="cite">    
+          <cite>Источник: </cite>
+          <a href="ru.wikipedia.org">ru.wikipedia.org</a>
+        </div>
+      </dt>
+      <dd class="clearfix">
+        <img src="img/wiki-2.png" alt="">
+        <p>По российскому ГОСТу для промышленного изготовления — это напиток с объёмной долей этилового спирта не более 1,2%, изготовленный в результате незавершённого спиртового и молочнокислого брожения сусла.</p>
+      </dd>
+    </dl>
+  </div>
 </section>
 
 
@@ -136,124 +135,119 @@
 </section>  
 
 <section class="assortment">
-<div class="container">
-<h2>Ассортимент</h2>
-<table class="assortment-table">
-  <tr>
-    <th>Название</th>
-    <th>Алк.</th>
-    <th>Ккал</th>
-    <th>Объём</th>
-    <th>Стоимость</th>
-  </tr>
-  <tr>
-    <td>Классика</td>
-    <td>&lt; 1,2%</td>
-    <td>33</td>
-    <td>330 мл</td>
-    <td>120 Р.</td>
-  </tr>
-  <tr>
-    <td>Шабаш</td>
-    <td>&gt; 1,2%</td>
-    <td>45</td>
-    <td>330 мл</td>
-    <td>250 Р.</td>
-  </tr>
-  <tr>
-    <td>Вахтёр <span>Новинка</span></td>
-    <td>&lt; 1%</td>
-    <td>35</td>
-    <td>0,5 л</td>
-    <td>150 Р.</td>
-  </tr>
-  <tr>
-    <td>Романтик <span>Новинка</span></td>
-    <td>&lt; 0,5%</td>
-    <td>27</td>
-    <td>0,5 л</td>
-    <td>90 Р.</td>
-  </tr>
-</table>
-</div>
+  <div class="container">
+    <h2>Ассортимент</h2>
+    <table class="assortment-table">
+      <tr>
+        <th>Название</th>
+        <th>Алк.</th>
+        <th>Ккал</th>
+        <th>Объём</th>
+        <th>Стоимость</th>
+      </tr>
+      <tr>
+        <td>Классика</td>
+        <td>&lt; 1,2%</td>
+        <td>33</td>
+        <td>330 мл</td>
+        <td>120 Р.</td>
+      </tr>
+      <tr>
+        <td>Шабаш</td>
+        <td>&gt; 1,2%</td>
+        <td>45</td>
+        <td>330 мл</td>
+        <td>250 Р.</td>
+      </tr>
+      <tr>
+        <td>Вахтёр <span>Новинка</span></td>
+        <td>&lt; 1%</td>
+        <td>35</td>
+        <td>0,5 л</td>
+        <td>150 Р.</td>
+      </tr>
+      <tr>
+        <td>Романтик <span>Новинка</span></td>
+        <td>&lt; 0,5%</td>
+        <td>27</td>
+        <td>0,5 л</td>
+        <td>90 Р.</td>
+      </tr>
+    </table>
+  </div>
 </section>
 
 <section class="order">
-<div class="container">
-<h2>Заказать</h2>
-<p>Не ждите пока нас отрекламируют, как Вятский квас, и мы поднимем цены! Закажите настоящий крафтовый квас сейчас. При заказе от 10 баррелей — скидка 10%.</p>
-<form class="order-form" action="">
-<div>
-  <label for="intro-field">Представьтесь:</label>
-  <input name="intro" id="intro-field" type="text" placeholder="Как мы можем к вам обращатся?">
-</div>
-<div>
-  <label for="phone-field">Номер телефона:</label>
-  <input type="text" name="phone" id="phone-field" placeholder="+7(xxx)xxx-xx-xx">
-  <label for="phone2-field">Доп. номер:</label>
-  <input type="text" name="phone2" id="phone-field2" placeholder="+7(xxx)xxx-xx-xx">
-</div>
-<div>
-  <label for="phone-field">Email:</label>
-  <input type="text" name="email" id="email-field" placeholder="Ваша электронная почта">
-</div>
-<div>
-  <label for="order-field">Объем заказа:</label>
-  <select name="order" id="order-field">
-    <option value="1">
-      От 5 до 10 баррелей в неделю
-    </option>
-  </select>  
-</div>
-<div>
-  <label for="comment-field">Доп. комментарий:</label>
-  <textarea name="comment" id="comment-field" cols="30" rows="10" placeholder="Сообщите нам все, что считаете нужным"></textarea>
-</div>
-<div>   
-  <label class="checkbox" for="subscription-field">
-      <input type="checkbox" name="subscription" id="subscription-field">
-      <span class="checkbox-indicator"></span>
-      Я согласен получать квасную рассылку</label>
-</div>
-<input type="submit" value="Отправить заказ">
-</form>
-</div>
+  <div class="container">
+    <h2>Заказать</h2>
+    <p>Не ждите пока нас отрекламируют, как Вятский квас, и мы поднимем цены! Закажите настоящий крафтовый квас сейчас. При заказе от 10 баррелей — скидка 10%.</p>
+    <form class="order-form" action="">
+      <div>
+        <label for="intro-field">Представьтесь:</label>
+        <input name="intro" id="intro-field" type="text" placeholder="Как мы можем к вам обращатся?">
+      </div>
+      <div>
+        <label for="phone-field">Номер телефона:</label>
+        <input type="text" name="phone" id="phone-field" placeholder="+7(xxx)xxx-xx-xx">
+        <label for="phone2-field">Доп. номер:</label>
+        <input type="text" name="phone2" id="phone-field2" placeholder="+7(xxx)xxx-xx-xx">
+      </div>
+      <div>
+        <label for="phone-field">Email:</label>
+        <input type="text" name="email" id="email-field" placeholder="Ваша электронная почта">
+      </div>
+      <div>
+        <label for="order-field">Объем заказа:</label>
+        <select name="order" id="order-field">
+          <option value="1">От 5 до 10 баррелей в неделю</option>
+        </select>  
+      </div>
+      <div>
+        <label for="comment-field">Доп. комментарий:</label>
+        <textarea name="comment" id="comment-field" cols="30" rows="10" placeholder="Сообщите нам все, что считаете нужным">      </textarea>
+      </div>
+      <div>   
+        <label class="checkbox" for="subscription-field">
+            <input type="checkbox" name="subscription" id="subscription-field">
+            <span class="checkbox-indicator"></span>Я согласен получать квасную рассылку
+        </label>
+      </div>
+      <input type="submit" value="Отправить заказ">
+    </form>
+  </div>
 </section>
 
 <footer>
   <div class="footer-container clearfix">
-
     <div class="footer-left">
       <img src="img/logo.png" alt="Кваст">
       <div class="footer-social">
         <a class="footer-social-in" href=#>Инстаграм</a><!--
-        --><a class="footer-social-fb" href=#>Фейсбук</a><!--
-        --><a class="footer-social-vk" href=#>Вконтакте</a>
+     --><a class="footer-social-fb" href=#>Фейсбук</a><!--
+     --><a class="footer-social-vk" href=#>Вконтакте</a>
       </div>
     </div>
-
-<div class="footer-right">
-<ul class="footer-nav">
-  <li><a href="#">История</a></li>
-  <li><a href="#">Производство</a></li>
-  <li><a href="#">Ассортимент</a></li>
-  <li><a href="#">Где купить</a></li>
-</ul>
-
-<div class="footer-down clearfix">
-  <p>При перепечатке материалов ссылка на сайт обязательна!</p>
-  <div class="footer-copyright">
-    <p>
-      <a href="#" src="img/htmlacademy.png" alt=""></a> 
-      <b>Разработчик:</b>
-      <span>HTML Academy</span>
-    </p>
+    <div class="footer-right">
+      <ul class="footer-nav">
+        <li><a href="#">История</a></li>
+        <li><a href="#">Производство</a></li>
+        <li><a href="#">Ассортимент</a></li>
+        <li><a href="#">Где купить</a></li>
+      </ul>
+      <div class="footer-down clearfix">
+        <p>При перепечатке материалов ссылка на сайт обязательна!</p>
+        <div class="footer-copyright">
+          <p>
+            <a href="#" src="img/htmlacademy.png" alt=""></a> 
+            <b>Разработчик:</b>
+            <span>HTML Academy</span>
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
-</div>
-
-</div>
 </footer>
  
 </body>
+
 </html>
